Refactor code structure for improved readability and maintainability

--- a/public/slides/brentari/ja.qmd
+++ b/public/slides/brentari/ja.qmd
@@ -1,6 +1,6 @@
 ---
-title: 手話言語における音韻論の出現
-subtitle: 手指形状の複雑性分析を中心に
+title: "手話音韻論の出現"
+subtitle: "Brentari (2019) 第5章：新興手話における音韻化プロセス"
 format: 
   clean-revealjs:
     chalkboard:
@@ -9,421 +9,519 @@ html-math-method:
   method: mathjax
   url: "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
 author:
-  - name: Brentari (2019) 要約
-    affiliations: 手話言語学研究
+  - name: 報告者
+    affiliations: ゼミ
 date: last-modified
 ---
 
-## あらすじ：ここまでの研究 {#sec-overview}
+## 前回までの振り返り
 
-### 音韻論の出現プロセス
+### 第5章の概要：音韻論の出現とは何か
 
-**基本的な枠組み**
+**根本的な問いかけ**
+この章では、「ジェスチャーはどのようにして音韻システムを持つ手話へと発展するのか」という問題を扱います。外見上は非常によく似ているアメリカ人のジェスチャーとアメリカ手話（ASL）話者の表現を比較し、手話が音韻構造を持つとはどういうことかを明らかにします。
 
-- ジェスチャーから手話への進化過程における音韻論の出現
-- コミュニティ手話（NSL）と村落手話（ABSL）の比較
-- 音韻化の3段階：対立の増加→対立の創出→生産的適用
+**音韻化の3段階** (Coppola & Brentari, 2014)
+手話が音韻システムを獲得する過程は以下の3段階で進行します：
 
-**ケーススタディ1・2前半**
+1. **対立の増加** (Increase Contrasts): 手の特定の素性（形状、位置、動きなど）が意味の違いを生み出すことを認識する段階
+2. **対立の創出** (Create the Opposition): 2つの素性や素性値をシステム内で明確に区別し、それぞれを異なる意味と関連付ける段階
+3. **対立の生産的適用** (Apply the Opposition Productively): その素性の対立を、同じ対立が必要な新しい状況に生産的に適用する段階
 
-- ABSL：非手指要素が感情表現から文法機能へと発達
-- NSL：実体分類詞と操作ハンドシェイプの体系的分業の出現
+## 前回までの振り返り
 
-[[詳細分析]{.button}](#sec-complexity)
+### 最適性理論における4つの制約：音韻システムを形作る力
 
-## 全体的な手指形状の複雑性 {#sec-complexity}
+音韻システムの発達は、以下の4つの制約タイプの相互作用によって説明されます（Prince & Smolensky, 1993; McCarthy, 2001）：
 
-### 5.3.2.1 ニカラグア4グループの比較
+| 制約タイプ         | 機能と具体例                                                                 | 手話での現れ方                                 |
+| ------------------ | ---------------------------------------------------------------------------- | ---------------------------------------------- |
+| **対応・整列制約** | 形式と構造レベル間の対応関係を規定。韻律と統語構造が適切に整列することを要求 | ABSLで韻律的境界と統語的境界が一致する発達     |
+| **分散制約**       | 音素空間を効果的に利用し、区別可能な形式を最大化することを要求               | 手指形状の複雑性がシステム全体に分散される現象 |
+| **忠実性制約**     | 入力形式と出力形式の対応関係を保持することを要求                             | アイコニシティが完全に失われず保持される傾向   |
+| **有標性制約**     | より単純で自然な形式を優先することを要求                                     | 調音しやすい手指形状が好まれる傾向（SFC等）    |
 
-**研究対象グループ**
+これらの制約は互いに競合し、その優先順位の変化が音韻システムの発達を駆動します。
 
-- ジェスチャー使用者（無言のジェスチャー）
-- ホームサイナー（個人手話システム）
-- NSL第1コーホート（コミュニティ手話初期）
-- NSL第2コーホート（コミュニティ手話発達期）
+## 研究対象：新興手話のケーススタディ
 
-**複雑性の測定**
+### アル＝サイード・ベドウィン手話 (ABSL) - 村落手話の典型例
 
-選択指と関節の複雑性を合計し、10の対象物記述全体で分析
+ABSLはイスラエル南部のベドウィン村で使用される村落手話です。この村では遺伝的聴覚障害により、ろう者の割合が一般人口より著しく高く、ろう者と聴者が共に手話を使用します。
 
-## 複雑性の結果と解釈
+**発達の特徴**：
+- 第1世代：発話単位が短く、多くが単一のサインで構成。顔の表情は主に感情表現に使用
+- 第2世代（年長者）：発話は長くなるが、節と節の関係は単純な並列に留まる
+- 第2世代（若年者）：発話がさらに長くなり、眉上げなどを文法的なイントネーションとして使用
 
-### ホームサイナーが最高値を示す理由
+**重要な発見**：世代を重ねるごとに非手指要素（顔の表情等）の機能が感情的なものから文法的なものへと移行し、統語構造の発達と密接に連携しています。
 
-**実験結果**
+### ニカラグア手話 (NSL) - コミュニティ手話の典型例
 
-- [ホームサイナー]{.alert}: 最も高い手指形状の複雑性
-- [ジェスチャー使用者]{.fg style="--col: #666"}: 最も低い複雑性
-- NSL話者: 中間的な複雑性
+NSLは1970年代後半にニカラグアでろう学校が設立された際に、ろう児たちによって自然発生的に創造された手話です。
 
-**理論的解釈**
+**発達の特徴**：
+- 多数のろう者話者を持ち、毎年新しいメンバー（生徒）が加わる
+- 形式の分析と再分析の機会が豊富
+- 手指形状の体系化と名詞・動詞の構造的区別が急速に発達
 
-ホームサイナーは自身のシステムの生産者だが受信者ではない（Carrigan & Coppola, 2017）
+## 今回の中心：5.3.2.1以降の詳細分析
 
-## 各グループの特徴分析
+### 本日の発表内容：手指形状の音韻化における分散と対称性
 
-### 分散原理の働き方
+音韻論の出現過程を理解するために、ニカラグアの研究データを詳細に分析します。この研究では、ジェスチャー、ホームサイン、そして新興手話言語NSLの話者を比較することで、音韻システムがどのように段階的に発達するかを明らかにしています。
 
-:::: {.columns}
+**取り上げる主要トピック**：
 
-::: {.column width="50%"}
-**ホームサイナー**
+- **5.3.2.1 全体的な手指の複雑性**：4つのグループ間での手指形状の複雑性の違いとその意味
+- **5.3.2.2 関節と選択指の異なる形態論的機能**：手話話者における複雑性の体系的分業
+- **5.3.3 繰り返しとアイコニシティの変化**：名詞と動詞の区別における音韻化プロセス
+- **5.4 音韻システムへの外的圧力**：言語生態系、文化、音声学的要因の影響
+- **5.5 結論**：音韻論出現の原理と学習者の役割
 
-- 形式の制限がない
-- 分散（DISPERSION）が最大限作用
-- システム整理の機会なし
-- 語彙目録を拡大するが効率化せず
-:::
+**研究の重要性**：これらの研究は、人間の言語能力の根本的な性質と、言語がどのようにして無から生まれるのかという言語学の根本問題に光を当てています。
 
-::: {.column width="50%"}
-**NSL話者**
+## 5.3.2.1 全体的な手指の複雑性：研究デザインと方法論
 
-- コミュニティでの交渉が優先
-- コミュニケーション効率化の圧力
-- 素性経済の効果が現れる
-- システムの体系化が進行
-:::
+### 実験の設計と分析対象の詳細
 
-::::
+この研究では、ニカラグアの4つの異なるグループを対象に、手指形状の複雑性を定量的に分析しました。
 
-## ジェスチャー使用者の特徴
+#### 研究参加者の4グループ
 
-### 対立認識の欠如
+1. **ジェスチャー使用者（silent gesturers）**：手話を知らない聴者。自然な身振りのみを使用
+2. **ホームサイナー（homesigners）**：聴者家族の中で育ったろう者。独自のサインシステムを発達させた個人
+3. **NSL第1コーホート（NSL cohort 1）**：1970年代後半〜1980年代にろう学校に入学した成人。NSLの創始者世代
+4. **NSL第2コーホート（NSL cohort 2）**：1990年代以降にろう学校に入学した若い成人。より体系化されたNSLを使用
 
-**Coppola & Brentari (2014)の段階論から**
+#### 手指形状の複雑性の定義と測定方法
 
-1. 対立の増加
-2. 対立の創出  
-3. 対立の生産的適用
+手指形状の複雑性は、Brentariの手指素性階層モデルに基づいて以下の2つの次元で評価されました：
 
-[ジェスチャー使用者]{.fg style="--col: #e64173"}は段階1にも達していない
+- **関節の構成（Joint configuration）**：指の屈曲パターンの複雑さ。伸展、単一関節屈曲、複数関節屈曲等
+- **選択指（Selected fingers）**：使用される指の組み合わせの複雑さ。単一指、複数指、全指等
 
-- 手が提供する対立の可能性を認識していない
-- システム構築のための「素材」が不足
-- 分散が不十分で体系化の基盤がない
+各次元で低・中・高の3段階に分類し、10の映像タスクを通じて名詞と動詞の表現を引き出しました。
 
-## 5.3.2.2 関節と選択指の形態論的機能 {#sec-morphological}
+## 5.3.2.1 全体的な手指の複雑性：結果と解釈
 
-### 音韻形式と意味の体系的関係
+### 驚くべき発見：ホームサイナーが最も高い複雑性を示す
 
-**研究の焦点**
+研究の結果、4つのグループ間で手指形状の複雑性に明確な違いが見られました：
 
-手指形状の複雑性が意味とどのように関連付けられ、体系化されるか
+| グループ               | 複雑性の度合い | 具体的な数値（相対値） | 理論的解釈                   |
+| ---------------------- | -------------- | ---------------------- | ---------------------------- |
+| **ホームサイナー**     | [最高]{.alert} | 100% (基準値)          | 分散原理が無制約で作用       |
+| **NSL第2コーホート**   | 中程度         | 約85%                  | コミュニティ圧力による効率化 |
+| **NSL第1コーホート**   | 中程度         | 約80%                  | 初期の体系化プロセス         |
+| **ジェスチャー使用者** | [最低]{.alert} | 約60%                  | 対立認識の欠如               |
 
-**音韻化の証拠**
+### なぜこのような結果になるのか：3つの理論的説明
 
-音韻形式が形態論的構造へ体系的にマッピングされること
+#### 1. ホームサイナー = 制約のない創造者
 
-**2つの次元の独立性**
+ホームサイナーは Carrigan & Coppola (2017) が指摘するように、「自身のシステムの生産者ではあるが、受信者ではない」という特殊な立場にあります。彼らのコミュニケーションパートナーは通常聴者の家族であり、ホームサイナーの構造的規則性を理解しません。そのため、コミュニケーション効率化の圧力がかからず、分散原理（DISPERSION）が制約なく作用して複雑性が最大化されます。
 
-- 関節の構成（Joint configuration）
-- 選択指（Selected fingers）
+#### 2. NSL話者 = コミュニティによる効率化
 
-## ASLにおける体系的対立
+NSL話者はろう者コミュニティ内でコミュニケーションを行うため、効率性が重要になります。素性経済（feature economy）の原則が働き、必要以上に複雑な形式は淘汰されていきます。
 
-### 確立された手話の例
+#### 3. ジェスチャー使用者 = 体系化の素材不足
 
-**選択指グループの対立**
+ジェスチャー使用者は Coppola & Brentari (2014) の音韻化3段階の最初の段階「対立の増加」にさえ到達していません。手が提供しうる対立の可能性を認識しておらず、体系を作るための「素材」が不足している状態です。
 
-B手形、1手形、その他の指グループが体系的に区別される
+## 音韻化プロセスの段階的発達：分散から体系化へ
 
-**関節構成の対立**
+### 段階1: 分散 (DISPERSION) - ホームサイナーにおける制約のない拡張
 
-- 完全伸展
-- 指の付け根関節のみ屈曲
-- 指節間関節のみ屈曲  
-- 両関節屈曲
+ホームサイナーの段階では、Flemming (2002) の分散理論が制約なく作用します。分散制約は「音韻要素の目録は多くの区別を持とうとし、区別の少ないシステムは単純な形式のみを含むが、区別の多いシステムは追加的により複雑な形式を含む」ことを規定します。
 
-[手話では2次元が独立して変化]{.alert}、ジェスチャーでは独立性なし
+**ホームサイナーの特徴**：
+- 豊富な対立形式を生成（分散）
+- システムを整理・組織化する原則が機能しない
+- 他者との相互作用による制約がない
+- 語彙目録を拡大できるが効率的に再編成できない
 
-## ジェスチャーと手話の決定的違い
+### 段階2: 効率化 - NSL話者におけるコミュニティ圧力
 
-### 複雑性の分布パターン
+NSL話者はろう者コミュニティという使用者集団の中でコミュニケーションを行うため、以下の要因が作用します：
 
-**ジェスチャー使用者（大人・子供共通）**
+**効率化の駆動力**：
+- コミュニケーション効率性の優先
+- 相互理解可能性の要求
+- 素性経済（feature economy）による体系整理
+- 使用頻度による形式の淘汰
 
-- 関節と選択指の独立した構成要素性を示さない
-- 高複雑性形式を [操作ハンドシェイプ]{.fg style="--col: #e64173"}に集中
+### 段階3: 体系化 - より高度な音韻システムへの発展
 
-**手話話者（大人・子供共通）**
+最終段階では、対称性（SYMMETRY）と規則性の確立により、真の音韻システムが形成されます：
 
-- 複雑性を体系的に分担
-- [選択指]{.fg style="--col: #e64173"}の高複雑性 → 実体分類詞
-- [関節]{.fg style="--col: #e64173"}の高複雑性 → 操作ハンドシェイプ
+**体系化の特徴**：
+- 形式間の体系的な関係性の確立
+- 予測可能な音韻規則の出現
+- ミニマルペアの体系的な利用
+- 生産的な音韻プロセスの発達
 
-## 国際比較データ
+[分散→効率化→体系化の順序は言語普遍的である可能性]{.fg style="--col: #e64173"}
 
-### アメリカ・ニカラグア・イタリアの結果
+## 5.3.2.2 手指形状の2つのタイプ：アイコニシティの体系的分業
 
-**共通パターン**
+### 物体ハンドシェイプと操作ハンドシェイプの根本的違い
 
-- 全グループで操作ハンドシェイプの関節複雑性が高い
-- [手話話者のみ]{.alert}が実体分類詞で選択指複雑性が高い
+手話の手指形状は、アイコニシティの種類によって大きく2つのカテゴリーに分けられます。これらの区別は、ジェスチャーでも手話でも普遍的に見られるため、音韻化プロセスを追跡する理想的な研究対象となります。
 
-**NSL話者の特徴**
+#### 実体分類詞 / 物体ハンドシェイプ（Object Handshapes）
 
-- ネイティブサイナーは存在しない
-- NSL2成人：早期学習者
-- NSL2子供：最低6年の手話経験
+**アイコニシティのタイプ**：「手-物体として」のアイコニシティ
+**機能**：物体の形状、大きさ、材質などの視覚的・触覚的特性を表現
+**特徴**：
+- 行為者（agent）が存在しない状況で使用
+- 物体が空間内で位置を占めたり移動したりする様子を表現
+- 選択指（どの指を使うか）が物体の特性と直接対応
 
-[新興言語でも確立言語と同じパターン]{.bg style="--col: #e64173"}
+**具体例**：
+- 細い棒状の物→人差し指（1-handshape）
+- 平らな面→平手（B-handshape）
+- 丸い球→O-handshape
 
-## 形態論的マッピングの習得
+#### 操作ハンドシェイプ（Handling Handshapes）
 
-### 「手としての手」vs「物体としての手」
+**アイコニシティのタイプ**：「手-手として」のアイコニシティ
+**機能**：行為者が物体をどのように掴み、操作し、扱うかを表現
+**特徴**：
+- 行為者の存在を前提とした使用
+- 物体との相互作用における手の形状と動作を表現
+- 関節の屈曲パターンが操作方法と直接対応
 
-**アイコニシティの段階的認識ではない**
+**具体例**：
+- ペンを持つ→指先でつまむ形状
+- コップを持つ→円筒を握る形状
+- ボールを投げる→球を握る形状
 
-音韻形式の形態構造への体系的マッピングの長期習得プロセス
+[この2つの区別が音韻化の鍵となる]{.fg style="--col: #e64173"}
 
-**ASL習得研究の知見**
+## ジェスチャーと手話の決定的違い：複雑性の分業パターン
 
-- 7歳まで：操作ハンドシェイプを体系的に使用しない
-- 能動的・他動的出来事の表現が不完全
-- 指複雑性の区別習得後も形態論的誤用が継続
+### 革命的発見：手話話者における体系的な複雑性の分業
 
-[体系的マッピング]{.alert}の習得は段階的で時間を要する
+アメリカ、ニカラグア、イタリア、中国での国際比較研究により、ジェスチャー使用者と手話話者の間に根本的な違いが発見されました。
 
-## 5.3.3 繰り返し：アイコニシティの再編成 {#sec-repetition}
+#### ジェスチャー使用者のパターン（大人・子供共通）
 
-### 名詞と動詞の区別における変化
+| 手指形状タイプ         | 関節の複雑性 | 選択指の複雑性 | 解釈               |
+| ---------------------- | ------------ | -------------- | ------------------ |
+| **物体ハンドシェイプ** | 低           | 低             | 単純な表現に留まる |
+| **操作ハンドシェイプ** | [高]{.alert} | [高]{.alert}   | 複雑性が集中       |
 
-**Abner et al.の研究**
+**パターンの意味**：ジェスチャー使用者は、手の動作的側面（操作）により注意を向け、両方の複雑性次元を同じ目的に使用します。独立した構成要素性（componentiality）が欠如しています。
 
-アイコニックな形式が抽象的な文法マーカーへと変化する過程
+#### 手話話者のパターン（NSL含む、大人・子供共通）
 
-**研究デザイン**
+| 手指形状タイプ         | 関節の複雑性 | 選択指の複雑性 | 解釈               |
+| ---------------------- | ------------ | -------------- | ------------------ |
+| **物体ハンドシェイプ** | 低           | [高]{.alert}   | 選択指で物体を区別 |
+| **操作ハンドシェイプ** | [高]{.alert} | 低             | 関節で操作を区別   |
+
+**パターンの意味**：手話話者は複雑性を体系的に分業し、各次元を異なる意味機能に特化させています。これは「手指形状の独立構成要素性」の証拠です。
+
+### この違いが示す音韻化の証拠
+
+Eccarius (2008) と Brentari et al. (2017) の研究によれば、この分業パターンは以下を示しています：
+
+1. **形式-意味対応の体系化**：各素性クラス（関節・選択指）が特定の意味タイプと対応
+2. **音韻構造の階層化**：素性が独立して操作可能な構成要素として機能
+3. **効率性の最適化**：システムの対称性が最大化される
+
+[これは言語特有の構造であり、ジェスチャーには見られない]{.fg style="--col: #e64173"}
+
+## 5.3.2.2 関節と選択指の異なる形態論的機能
+
+### ホームサイナーの移行プロセス
+
+**成人ホームサイナー**
+
+- 4人中3人が手話話者のパターンを示す
+- 物体ハンドシェイプで選択指の複雑性が高い
+
+**子供ホームサイナー（フリオの縦断研究）**
+
+- 7歳時点: ジェスチャー使用者のパターン
+- 12歳時点: 手話話者のパターンに変化
+
+[ホームサインシステムは生涯を通じて変化可能]{.fg style="--col: #e64173"}
+
+## 5.3.2.2 関節と選択指の異なる形態論的機能
+
+### 音韻化プロセスの形式化
+
+**3段階のプロセス**:
+
+1. **分散 (DISPERSION)**: 形式の範囲を広げる
+2. **対応 (CORRESPONDENCE)**: 形式と意味を関連付ける
+3. **対称性 (SYMMETRY) + 素性経済**: 体系を効率的に組織化
+
+**最適性理論的説明**:
+
+- 各段階で異なる制約が優先される
+- アイコニシティ、調音の容易さ、知覚の容易さが常に作用
+- しかし単独では変化を説明できない
+
+## 5.3.3 繰り返し：アイコニシティの喪失と再編成
+
+### 研究の背景と目的
+
+**研究対象**
+
+- 名詞と動詞の構造的区別の創出プロセス
+- 「繰り返し」という音韻的特性の機能変化
+
+**実験デザイン**
 
 - ニカラグアで一般的な物体と行動のペア
-- 反復的・非反復的出来事の両方を含む映像タスク
-- 名詞と動詞の形式を引き出す実験
+- 反復的出来事と非反復的出来事を含む映像タスク
+- ASLサイナー + ニカラグアの4グループで実施
 
-## 名詞・動詞区別の方略
+## 5.3.3 繰り返し：アイコニシティの喪失と再編成
 
-### 4つの主要な方略
+### 名詞と動詞を区別する方略
 
-1. **語順** - 語の配置による区別
-2. **関節の使用** - 近位関節 vs 遠位関節
-3. **繰り返し** - 動きの反復
-4. **基底手の使用** - 非利き手の活用
+| 方略           | 説明                           | 例         |
+| -------------- | ------------------------------ | ---------- |
+| **語順**       | 動詞最終語順                   | 非音韻論的 |
+| **関節の使用** | 動詞=近位関節、名詞=遠位関節   | 音韻論的   |
+| **繰り返し**   | 名詞で繰り返し、動詞で単一動作 | 音韻論的   |
+| **基底手**     | 動詞で基底手使用               | 音韻論的   |
 
-[繰り返し]{.fg style="--col: #e64173"}の機能変化に注目
+[焦点は「繰り返し」の機能変化]{.alert}
 
-## 繰り返しの機能変化
+## 5.3.3 繰り返し：アイコニシティの喪失と再編成
 
-### 世代による使用パターンの変遷
+### 「繰り返し」の機能変化
 
-**ホームサイナー・NSL第1コーホート**
+**ホームサイナー + NSL第1コーホート**
 
-- 動詞が [反復的な場合のみ]{.fg style="--col: #e64173"} 名詞を標示
-- 対象物が反復的に使われる様子を表す
-- [アイコニック]{.alert}な方略として機能
+- 繰り返しは[反復的]{.alert}な動詞の場合のみ名詞を標示
+- [アイコニック]{.alert}な方略: 反復使用される物体を表現
 
-**NSL第2・第3コーホート**
+**NSL第2・第3コーホート**  
 
-- 動詞の反復性に関わらず [一貫して名詞を標示]{.fg style="--col: #e64173"}
-- 体系内で般化された使用
-- [抽象的な文法マーカー]{.alert}として機能
+- 繰り返しは動詞の反復性に関わらず[一貫して]{.alert}名詞を標示
+- [般化]{.alert}された形態音韻論的機能
 
-## アイコニシティから抽象化への過程
+[分布の変化が音韻化の証拠]{.fg style="--col: #e64173"}
 
-### 音韻特性の般化
+## 5.3.3 繰り返し：アイコニシティの喪失と再編成
 
-**初期段階**
+### 音韻化における重要な洞察
 
-- 具体的な状況（反復的出来事）での使用
-- 現実世界との直接的な対応関係
-- アイコニックな動機
+**アイコニシティから抽象化へ**
 
-**発達段階**
+- 最初: アイコニック機能（反復=反復的使用）
+- 後期: 抽象的な形態音韻論的機能（反復=名詞性）
 
-- 分布の変化と体系内での般化
-- 形態音韻論的機能の獲得
-- 抽象的な文法カテゴリーマーカー
+**体系内での般化**
 
-[アイコニシティの再編成]{.bg style="--col: #e64173"}：排除ではなく体系化
+- 特定の文脈から一般的な文法的機能へ
+- 分布パターンの変化が重要
 
-## 5.4 外的圧力の影響 {#sec-external}
+[音韻的特性の出現≠分布の確立]{.alert}
 
-### 音韻システムへの外部要因
+## 5.4 音韻システムへの外的圧力
 
-**外的圧力の種類**
+### 外的要因の5つのカテゴリー
 
-- 自然さ・指示対象のアイコニシティ
-- 音声学的圧力（調音・知覚の容易さ）
-- [言語生態系]{.alert}（社会的環境）
-- 文化的連想
-- タイプ・トークンの頻度
+| 要因                       | 内容               | 例                         |
+| -------------------------- | ------------------ | -------------------------- |
+| **自然さ・アイコニシティ** | 指示対象の特性     | 動物→擬人化、道具→操作手形 |
+| **音声学的圧力**           | 調音・知覚の容易さ | 選択指制約（SFC）          |
+| **言語生態系**             | 社会的環境         | ろう者コミュニティの規模   |
+| **文化的連想**             | 文化特有の経験     | 箸 vs ナイフ・フォーク     |
+| **頻度**                   | 使用頻度           | 高頻度素性の早期音韻化     |
 
-**内的vs外的要因**
+## 5.4.1 ABSL における外的原理の適用
 
-どちらが音韻論の出現により重要か？
+### 家族方言と音韻構造化の萌芽
 
-## 5.4.1 ABSLにおける外的原理
+**家族方言 (familylects) の現象**
 
-### 家族方言と音声学的圧力
+- コミュニティ全体: サインのバリエーション
+- 家族グループ内: より高い規則性
 
-**家族方言（familylects）**
+**EGG（卵）の例**
 
-- コミュニティ全体：サインのバリエーション
-- 家族グループ内：より高い規則性
+- 元の形: BIRD（鳥のくちばし）+ 丸い物を掴む操作ハンドシェイプ
+- 家族方言: 後者が前者に[同化]{.alert}
+- 結果: アイコニシティ減少、調音容易性向上
 
-**EGG（卵）の事例**
+[選択指制約（SFC）への適合]{.fg style="--col: #e64173"}
 
-- 元の構成：BIRD + 丸い物を掴む操作ハンドシェイプ
-- 家族方言：後要素が前要素のハンドシェイプに同化
-- 意味的アイコニシティの喪失
-- SELECTED FINGERS CONSTRAINT（SFC）への適合
-
-## 慣習化と音声学的圧力
-
-### アイコニシティ vs 調音の容易さ
-
-**語彙の慣習化プロセス**
-
-1. 頻繁な使用により慣習化
-2. 意味と形式の結びつきが弱化  
-3. 調音の容易さという音声学的圧力が優勢に
-4. アイコニシティよりも効率性を優先
-
-[慣習化]{.alert}が外的圧力の作用を促進する
-
-## 5.4.2 内的要因 vs 外的要因 {#sec-comparison}
+## 5.4.2 内的要因 vs 外的要因の重要性
 
 ### NSL と ABSL の比較
 
-**手指複雑性の違い**
+| 側面           | NSL                            | ABSL                   |
+| -------------- | ------------------------------ | ---------------------- |
+| **手指複雑性** | 中～高複雑性が22-26%           | わずか4%               |
+| **言語生態系** | 多数のろう者、毎年新規参入     | 少数のろう者、出生のみ |
+| **発達速度**   | 早い（分析・再分析の機会豊富） | 遅い（機会限定）       |
 
-- ASL・NSL：中〜高複雑性が22-26%
-- ABSL：わずか4%
+**Horton (2018) の研究**
 
-**発達速度の差の要因**
+- グアテマラのホームサイナー比較
+- 仲間交流型 > 家族内型（分散指数）
 
-[言語生態系]{.fg style="--col: #e64173"}という外的要因が決定的
+## 5.4.2 内的要因 vs 外的要因の重要性
 
-## 言語生態系の詳細分析
+### 言語生態系の決定的役割
 
-### コミュニティ手話 vs 村落手話
+**コミュニティ手話（NSL型）**
 
-:::: {.columns}
+- 豊富な話者人口
+- 継続的な新規参入
+- 活発な形式の分析・再分析
 
-::: {.column width="50%"}
-**NSL（コミュニティ手話）**
+**村落手話（ABSL型）**  
 
-- 多数のろう者話者
-- 毎年新しいメンバー（生徒）
-- 形式の分析・再分析の機会が豊富
-- 世代間での体系の洗練
-:::
+- 限定的な話者人口
+- 出生による新規参入のみ
+- 音韻化の「火花」がまだ散っていない状態
 
-::: {.column width="50%"}
-**ABSL（村落手話）**
+[言語生態系が発達スピードを左右]{.alert}
 
-- 少数のろう者話者
-- 出生による増加のみ
-- 分析機会の制限
-- 発達の遅れ
-:::
+## 5.5 結論
 
-::::
+### 手話音韻論出現の主要原理
 
-## グアテマラの分散指数研究
+**音韻化の段階的プロセス**
 
-### Horton (2018)の知見
+1. **ホームサイン**: 分散による対立形式の増加
+2. **若い手話言語**: 対称性・素性経済による体系化
 
-**2つのホームサイナータイプ**
+**アイコニシティと音韻論の関係**
 
-- [仲間と交流するホームサイナー]{.fg style="--col: #e64173"}（NSL類似）
-- [家族内ホームサイナー]{.fg style="--col: #666"} （ABSL類似）
+- 相互排他的ではない
+- アイコニシティは組織化・慣習化・体系化される
 
-**結果**
+**形態音韻論の優先性**
 
-仲間交流タイプが高い分散指数（より多様な手指形状）を示す
+- 名詞/動詞区別 > 語彙内ミニマルペア
+- 形態音韻論的プロセスが先行
 
-**結論**
+## 5.5 結論
 
-ABSLの低複雑性は体系の再編成結果ではなく、[音韻化の火花がまだ散っていない状態]{.alert}
+### 学習者の重要な役割
 
-## 5.5 結論 {#sec-conclusion}
+**言語学習者（特に子供）の貢献**:
 
-### 音韻論出現の主要知見
+- 複雑な構造から基本要素を特定
+- カテゴリーや境界を見出す分析能力
+- システムの再編成と新要素の創出
 
-**起源と発達**
+**発達の方向性**:
 
-- 手話の音韻対立はジェスチャーに起源
-- 再編成パターンは言語独自の抽象的なもの
-- アイコニシティは排除されず、言語的原理によって再編成
+- ジェスチャー → ホームサイン → 手話
+- 各段階で異なる音韻的原理が作用
+- 内的・外的圧力の相互作用
 
-**発達段階**
+[言語学習者が音韻システム創出の鍵]{.fg style="--col: #e64173"}
 
-- ホームサイン：[分散]{.alert}による対立形式の増加
-- 若い手話言語：[対称性]{.alert}と[素性経済]{.alert}による体系化
+## 全体の統合的理解：手話音韻論出現の全体像
 
-## 形態音韻論の優先性
+### 本日の発表で明らかになった手話音韻論の本質
 
-### ミニマルペアより早い出現
+これまでの詳細な分析を通じて、手話における音韻論の出現が以下の統合的なプロセスであることが明らかになりました：
 
-**観察された順序**
+#### 手指形状の音韻化における段階的発達
 
-1. 形態音韻論的プロセス（名詞・動詞の区別）
-2. 語彙内のミニマルペアの創出
+**第1段階：分散による素材の蓄積**
+- ホームサイナーで観察される無制約な複雑性の増大
+- 対立可能性の探索と形式範囲の拡張
+- 体系化の前提条件としての「素材」の準備
 
-**学習者の役割**
+**第2段階：対応関係の確立**
+- 形式と意味の体系的なマッピングの開始
+- 物体ハンドシェイプ↔選択指の複雑性、操作ハンドシェイプ↔関節の複雑性
+- アイコニック基盤を保持した機能分化
 
-[子供たち]{.fg style="--col: #e64173"}が重要な役割：
+**第3段階：対称性と効率性の最適化**
+- 素性経済による不要な複雑性の除去
+- システム全体の対称性の確立
+- 生産的な音韻プロセスの確立
 
-- 複雑構造からの基本要素特定
-- カテゴリー・境界の発見
-- システム再編成と新要素創出
+#### アイコニシティから抽象性への段階的移行
 
-## アイコニシティと音韻論の関係
+**「繰り返し」の機能変化が示すパターン**：
+- **初期**：アイコニック機能（反復=反復的使用を表現）
+- **中期**：文脈依存的な文法機能（反復的動詞→名詞標示）
+- **後期**：抽象的な形態音韻論機能（一律な名詞標示）
 
-### 相互排他的ではない共存
+この変化は、音韻的特性の**分布パターンの変化**が音韻化の核心であることを示しています。形式の出現ではなく、その使用法の般化が重要です。
 
-**従来の誤解**
+#### 言語生態系の決定的影響
 
-アイコニシティと音韻論は対立する
+**発達速度を左右する外的要因**：
+- **コミュニティサイズ**：大きなろう者集団ほど急速な発達
+- **新規参入の頻度**：継続的な学習者の存在が体系化を促進
+- **分析・再分析の機会**：多様な使用者間の相互作用が重要
 
-**実際の関係**
+[NSL（22-26%高複雑性）vs ABSL（4%高複雑性）の対比がこれを実証]{.fg style="--col: #e64173"}
 
-- アイコニシティは手話文法の中で組織化
-- 慣習化・体系化のプロセスを経る
-- 言語的制約によって再編成される
+## 理論的含意と今後の研究課題
 
-[アイコニシティの言語的制御]{.bg style="--col: #e64173"}が重要な特徴
+### 言語学理論への貢献と示唆
 
-## 手話言語学への示唆
+今回紹介した研究は、言語学の根本的な問いに対して以下の新しい洞察を提供します：
 
-### 人間言語理解への貢献
+#### 普遍文法と創発の関係
 
-**手話の特殊性**
+- 手話の音韻化プロセスは、人間に内在する言語能力の発現である可能性
+- しかし、その発現には特定の社会的条件（言語生態系）が必要
+- 生物学的制約と社会的要因の相互作用として言語が理解できる
 
-- 言語創発プロセスの直接観察が可能
-- 音韻論出現の段階的変化を追跡
-- モダリティ固有の特徴と普遍的特徴の区別
+#### 音韻論の本質的特性
 
-**理論的意義**
+- 音韻システムは単なる対立の集合ではなく、体系的な組織化原理を持つ
+- アイコニシティと抽象性は対立するものではなく、段階的に移行するもの
+- 分布パターンの変化が音韻化の核心的指標
 
-[手話は人間言語の創発過程を理解する貴重な窓]{.alert}
+#### 言語獲得と言語変化の統一的理解
 
-言語能力の本質的特徴の解明に貢献
+- 個体発生（言語獲得）と系統発生（言語進化）に共通する原理の存在
+- 学習者の分析能力が言語システムの再編成と精緻化を駆動
+- 世代間伝達における「不完全さ」が革新の源泉
 
-## 今後の研究方向
+### 今後の研究課題と展望
 
-### 残された課題
+1. **他の手話での検証**：世界各地の新興手話での同様パターンの確認
+2. **音韻以外の文法要素**：統語、意味論での類似プロセスの探索
+3. **計算モデリング**：音韻化プロセスの数理的・計算論的モデル構築
+4. **応用研究**：手話教育、ろう児の言語発達支援への応用
+5. **比較言語学的研究**：音声言語の歴史的変化との比較分析
 
-**比較研究の拡大**
+[手話研究が人間言語の本質解明に不可欠な領域であることが確認された]{.fg style="--col: #e64173"}
 
-- より多様な新興手話の分析
-- 異なる言語生態系での発達比較
-- 長期縦断研究の必要性
+## 質疑応答とディスカッション
 
-**理論的発展**
+### 本日の発表内容について
 
-- 音韻化プロセスの普遍的特徴の特定
-- 他の言語モダリティとの比較理論
-- 言語生態系要因の詳細モデル化
+**技術的質問歓迎テーマ**：
 
-**ありがとうございました**
+- 実験方法論の詳細（映像タスク、測定方法、統計分析等）
+- 理論的解釈の妥当性（最適性理論の適用、段階設定の根拠等）
+- 他言語・他研究との比較（音声言語、他の手話、ジェスチャー研究等）
+- 用語・概念の明確化（分散、対称性、アイコニシティ等の定義）
 
-[[質疑応答]{.button}](#sec-overview)
+**発展的議論歓迎テーマ**：
+
+- 言語進化論への含意
+- ろう文化・ろう教育への示唆
+- 認知科学・心理学との接点
+- 計算言語学的モデリングの可能性
+
+**個人的関心・感想**：
+
+- 研究手法への感想
+- 理論的洞察への共感・疑問
+- 自身の研究・関心領域との関連
+
+[活発な議論を通じて、手話音韻論への理解を深めましょう]{.alert}
