Refactor code structure for improved readability and maintainability

--- a/static/references.bib
+++ b/static/references.bib
@@ -217,6 +217,21 @@
   keywords = {Computer Science - Computation and Language}
 }
 
+@article{hayes2008Maximum,
+  title = {A Maximum Entropy Model of Phonotactics and Phonotactic Learning},
+  author = {Hayes, Bruce and Wilson, Colin},
+  year = {2008},
+  month = jul,
+  journal = {Linguistic Inquiry},
+  volume = {39},
+  number = {3},
+  pages = {379--440},
+  issn = {0024-3892, 1530-9150},
+  doi = {10.1162/ling.2008.39.3.379},
+  urldate = {2025-07-29},
+  langid = {english}
+}
+
 @inproceedings{higy2021Discrete,
   title = {Discrete Representations in Neural Models of Spoken Language},
   booktitle = {Proceedings of the Fourth BlackboxNLP Workshop on Analyzing and Interpreting Neural Networks for NLP},
