--- a/static/references.bib
+++ b/static/references.bib
@@ -133,6 +133,18 @@
   keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,Electrical Engineering and Systems Science - Audio and Speech Processing}
 }
 
+@article{chomsky1965controversial,
+  title = {Some Controversial Questions in Phonological Theory},
+  author = {Chomsky, Noam and Halle, Morris},
+  year = {1965},
+  journal = {Journal of linguistics},
+  volume = {1},
+  number = {2},
+  pages = {97--138},
+  publisher = {Cambridge University Press},
+  urldate = {2025-07-29}
+}
+
 @article{cruzblandon2023Introducing,
   title = {Introducing Meta-Analysis in the Evaluation of Computational Models of Infant Language Development},
   author = {Cruz Bland{\'o}n, Mar{\'i}a Andrea and Cristia, Alejandrina and R{\"a}s{\"a}nen, Okko},
@@ -457,6 +469,21 @@
   address = {Cambridge, MA},
   doi = {10.1162/coli_a_00526},
   urldate = {2025-07-01}
+}
+
+@book{prince2004Optimality,
+  title = {Optimality Theory: Constraint Interaction in Generative Grammar},
+  shorttitle = {Optimality Theory},
+  author = {Prince, Alan and Smolensky, Paul},
+  year = {2004},
+  month = jan,
+  edition = {1},
+  publisher = {Wiley},
+  doi = {10.1002/9780470759400},
+  urldate = {2025-07-29},
+  copyright = {http://doi.wiley.com/10.1002/tdm\_license\_1.1},
+  isbn = {978-1-4051-1932-0 978-0-470-75940-0},
+  langid = {english}
 }
 
 @article{reubold2010Vocal,
