Update ja.pdf and ja.qmd for content revisions and corrections

--- a/public/papers/2025S_mon3_hayashi/ja.qmd
+++ b/public/papers/2025S_mon3_hayashi/ja.qmd
@@ -134,12 +134,7 @@ $$
 
 この失敗に対応するため、本論文では「投射（projection）」という概念を導入する。これは、音韻的表象の中から特定の素性値を持つ要素のみを抽出し、そのサブストリングに対して制約を適用するというものである。特に、母音調和には母音のみで構成される「母音投射（vowel projection）」が用いられた。例えば、`gondwa`のような形式は、デフォルトの投射（完全な表象）と母音投射（`o-a`という母音のシーケンス）の両方で表現される。
 
-$$
-\begin{array}{l}
-\text{Default projection: } [\text{seg}] \text{g o n d w a} [\text{seg}] \\
-\text{Vowel projection: } [\text{seg}] \begin{array}{l} \text{high} \\ \text{low} \\ \text{back} \\ \text{seg} \end{array} \begin{array}{l} \text{high} \\ \text{low} \\ \text{back} \\ \text{seg} \end{array} [\text{seg}] [\text{seg}]
-\end{array}
-$$
+![](images/projection.png)
 
 母音投射を導入した学習モデルでは、母音調和に不可欠な制約が迅速に発見された。例えば、非初期の中母音が先行する中母音によってライセンスされないことを禁止する制約や、`o`が先行する`o`によってライセンスされるというより厳格な要件を課す制約などである。このモデルは、初期のモデルでは失敗した`mVndVma`のような形式の母音調和を正確に分類することができた。
 
@@ -167,11 +162,11 @@ $$
 
 ## 制約選択問題への取り組み
 
-最適性理論 (Prince and Smolensky, 1993/2004) を含む従来の音韻論的学習モデルの多くは、制約セットが普遍文法 (Universal Grammar, UG) によって事前に提供されると仮定してきた。しかし、本モデルは、UGが素性インベントリと制約形式を決定するものの、個々の制約は学習者がデータの分布から能動的に探索・選択するという立場を取る。この「制約選択問題」に対して、正確性（observed-to-expected ratio, $O/E$）と一般性（constraint generality）に基づく探索ヒューリスティックを提案したことは、言語学習者がどのようにして膨大な可能性の中から適切な一般化を発見するかについての洞察を提供する。これは、言語獲得における普遍的原理と経験的学習の相互作用をより深く理解するための基礎となる。
+最適性理論 [@prince2004Optimality] を含む従来の音韻論的学習モデルの多くは、制約セットが普遍文法 (Universal Grammar, UG) によって事前に提供されると仮定してきた。しかし、本モデルは、UGが素性インベントリと制約形式を決定するものの、個々の制約は学習者がデータの分布から能動的に探索・選択するという立場を取る。この「制約選択問題」に対して、正確性（observed-to-expected ratio, $O/E$）と一般性（constraint generality）に基づく探索ヒューリスティックを提案したことは、言語学習者がどのようにして膨大な可能性の中から適切な一般化を発見するかについての洞察を提供する。これは、言語獲得における普遍的原理と経験的学習の相互作用をより深く理解するための基礎となる。
 
 ## 音韻配列論と形態音韻的交替の関係性
 
-論文では、音韻配列論が形態音韻的交替（alternation）とどのように関連するかについても考察している。OTでは、音韻配列論的制約と忠実性制約の間の階層が、表層形への静的な制約と、それらの制約を遵守する交替の両方を導くとされる (Prince and Smolensky, 1993/2004)。しかし、本モデルは、音韻配列論の知識が言語学習者が交替を発見するのを容易にするという、より緩やかな関係性を提唱する。つまり、子供はまず音韻配列論の概略分析を行い、その後で音韻配列論的知識が交替パターンの学習を補助するという段階的な獲得プロセスを示唆している。これは、言語獲得の全体的なアーキテクチャが、音韻論的知識が獲得される漸進的なプロセスを再現するという、「学習理論的音韻論（learning-theoretic phonology）」の概念を提示するものである。
+論文では、音韻配列論が形態音韻的交替（alternation）とどのように関連するかについても考察している。OTでは、音韻配列論的制約と忠実性制約の間の階層が、表層形への静的な制約と、それらの制約を遵守する交替の両方を導くとされる [@prince2004Optimality]。しかし、本モデルは、音韻配列論の知識が言語学習者が交替を発見するのを容易にするという、より緩やかな関係性を提唱する。つまり、子供はまず音韻配列論の概略分析を行い、その後で音韻配列論的知識が交替パターンの学習を補助するという段階的な獲得プロセスを示唆している。これは、言語獲得の全体的なアーキテクチャが、音韻論的知識が獲得される漸進的なプロセスを再現するという、「学習理論的音韻論（learning-theoretic phonology）」の概念を提示するものである。
 
 # 結論
 
